cmake_minimum_required(VERSION 3.19)
project(c__)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")

add_executable(c__ demo1.cpp  demo1_fun.cpp demo1_fun.h demo1/study_01.cpp
        demo1/study_01.h project01/pro01.cpp project01/pro01.h project01/utils.cpp project01/utils.h)
add_executable(zxf main.cpp)

add_library(test SHARED main.cpp)

add_executable(demo2_01 demo2/01.cpp)
add_executable(demo2_02 demo2/02.cpp)
add_executable(demo2_03 demo2/03.cpp)
add_executable(demo2_04 demo2/04.cpp)
add_executable(demo2_05 demo2/05.cpp)
add_executable(demo2_06 demo2/06.cpp)
add_executable(demo3_01 demo3/01.cpp)
add_executable(demo3_02 demo3/02.cpp)
add_executable(demo3_04 demo3/04.cpp)
add_executable(demo4_01 demo4/01.cpp)
add_executable(demo4_02 demo4/02.cpp)
add_executable(demo4_03 demo4/03.cpp)
add_executable(demo4_04 demo4/04.cpp)
add_executable(demo4_05 demo4/05.cpp)

add_executable(demo5_01 demo5/01.cpp demo5/point.h demo5/point.cpp demo5/cycle.h demo5/cycle.cpp)


add_executable(demo5_02 demo5/02.cpp)
add_executable(demo5_03 demo5/03.cpp)
add_executable(demo6_01 demo6/01.cpp)
add_executable(demo6_02 demo6/02.cpp)
add_executable(demo6_03 demo6/03.cpp)
add_executable(demo6_04 demo6/04.cpp)
add_executable(demo6_05 demo6/05.cpp)
add_executable(demo6_06 demo6/06.cpp)
add_executable(demo6_07 demo6/07.cpp)
add_executable(demo6_08 demo6/08.cpp)
add_executable(demo7_01 demo7/01.cpp)
add_executable(demo7_02 demo7/02.cpp)
add_executable(demo7_03 demo7/03.cpp)
add_executable(demo7_04 demo7/04.cpp)
add_executable(demo7_05 demo7/05.cpp)
add_executable(demo7_06 demo7/06.cpp)
add_executable(demo7_07 demo7/07.cpp)
add_executable(demo7_08 demo7/08.cpp)
add_executable(demo7_09 demo7/09.cpp)
add_executable(demo8_01 demo8/01.cpp)
add_executable(demo8_02 demo8/02.cpp)
add_executable(demo8_03 demo8/03.cpp)
add_executable(demo8_04 demo8/04.cpp)
add_executable(demo8_05 demo8/05.cpp)
add_executable(demo8_06 demo8/06.cpp)
add_executable(demo8_07 demo8/07.cpp)
add_executable(project02_01 project02/01.cpp)
add_executable(demo9_01 demo9/01.cpp)
add_executable(demo9_02 demo9/02.cpp)
add_executable(project02_02 project02/02.cpp)
add_executable(project02_03 project02/03.cpp)
add_executable(demo10_01 demo10/01.cpp)
add_executable(demo10_02 demo10/02.cpp)
add_executable(demo10_03 demo10/03.cpp)
add_executable(demo10_04 demo10/04.cpp)