cmake_minimum_required(VERSION 3.19)
project(c__)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")

add_executable(c__ demo1.cpp  demo1_fun.cpp demo1_fun.h demo1/study_01.cpp
        demo1/study_01.h project01/pro01.cpp project01/pro01.h project01/utils.cpp project01/utils.h)
add_executable(zxf main.cpp)

add_library(test SHARED main.cpp)

add_executable(demo2_01 demo2/01.cpp)
add_executable(demo2_02 demo2/02.cpp)
add_executable(demo2_03 demo2/03.cpp)
add_executable(demo2_04 demo2/04.cpp)
add_executable(demo2_05 demo2/05.cpp)
add_executable(demo2_06 demo2/06.cpp)
add_executable(demo3_01 demo3/01.cpp)
add_executable(demo3_02 demo3/02.cpp)
add_executable(demo3_04 demo3/04.cpp)
add_executable(demo4_01 demo4/01.cpp)
add_executable(demo4_02 demo4/02.cpp)
add_executable(demo4_03 demo4/03.cpp)
add_executable(demo4_04 demo4/04.cpp)
add_executable(demo4_05 demo4/05.cpp)

add_executable(demo5_01 demo5/01.cpp demo5/point.h demo5/point.cpp demo5/cycle.h demo5/cycle.cpp)


add_executable(demo5_02 demo5/02.cpp)
add_executable(demo5_03 demo5/03.cpp)
add_executable(demo6_01 demo6/01.cpp)
add_executable(demo6_02 demo6/02.cpp)
add_executable(demo6_03 demo6/03.cpp)
add_executable(demo6_04 demo6/04.cpp)
add_executable(demo6_05 demo6/05.cpp)
add_executable(demo6_06 demo6/06.cpp)
add_executable(demo6_07 demo6/07.cpp)
add_executable(demo6_08 demo6/08.cpp)
add_executable(demo7_01 demo7/01.cpp)
add_executable(demo7_02 demo7/02.cpp)
add_executable(demo7_03 demo7/03.cpp)
add_executable(demo7_04 demo7/04.cpp)
add_executable(demo7_05 demo7/05.cpp)
add_executable(demo7_06 demo7/06.cpp)
add_executable(demo7_07 demo7/07.cpp)
add_executable(demo7_08 demo7/08.cpp)
add_executable(demo7_09 demo7/09.cpp)
add_executable(demo8_01 demo8/01.cpp)
add_executable(demo8_02 demo8/02.cpp)
add_executable(demo8_03 demo8/03.cpp)
add_executable(demo8_04 demo8/04.cpp)
add_executable(demo8_05 demo8/05.cpp)
add_executable(demo8_06 demo8/06.cpp)
add_executable(demo8_07 demo8/07.cpp)
add_executable(project02_01 project02/01.cpp)
add_executable(demo9_01 demo9/01.cpp)
add_executable(demo9_02 demo9/02.cpp)
add_executable(project02_02 project02/02.cpp)
add_executable(project02_03 project02/03.cpp)
add_executable(demo10_01 demo10/01.cpp)
add_executable(demo10_02 demo10/02.cpp)
add_executable(demo10_03 demo10/03.cpp)
add_executable(demo10_04 demo10/04.cpp)

add_executable(project03_mange_system project03/mange_system.cpp project03/workerManager.cpp
        project03/workerManager.h project03/worker.h project03/employee.cpp project03/employee.h project03/boss.cpp
        project03/boss.h project03/manager.h project03/manager.cpp)

add_executable(project03_test project03/test.cpp project03/worker.h project03/employee.h project03/employee.cpp
        project03/manager.cpp project03/manager.h project03/boss.h project03/boss.cpp)
add_executable(demo11_01 demo11/01.cpp)
add_executable(demo11_02 demo11/02.cpp)
add_executable(demo11_03 demo11/03.cpp)
add_executable(demo11_04 demo11/04.cpp)
add_executable(demo11_05 demo11/05.cpp)
add_executable(demo11_06 demo11/06.cpp)
add_executable(demo11_07 demo11/07.cpp)
add_executable(demo11_08 demo11/08.cpp)
add_executable(demo12_01 demo12/01.cpp)
add_executable(demo12_02 demo12/02.cpp demo12/Person.cpp demo12/Person.h demo12/Person.hpp)
add_executable(demo12_03 demo12/03.cpp)
add_executable(project04_main project04/main.cpp project04/myArray.hpp)
add_executable(demo13_01 demo13/01.cpp)
add_executable(demo13_02 demo13/02.cpp)
add_executable(demo13_03 demo13/03.cpp)
add_executable(demo13_04 demo13/04.cpp)
add_executable(demo13_05 demo13/05.cpp)
add_executable(demo13_06 demo13/06.cpp)
add_executable(demo13_07 demo13/07.cpp)
add_executable(demo13_08 demo13/08.cpp)
add_executable(demo13_09 demo13/09.cpp)
add_executable(demo13_10 demo13/10.cpp)
add_executable(demo13_11 demo13/11.cpp)
add_executable(demo14_01 demo14/01.cpp)
add_executable(demo14_02 demo14/02.cpp)
add_executable(demo14_03 demo14/03.cpp)
add_executable(demo14_04 demo14/04.cpp)
add_executable(demo14_05 demo14/05.cpp)
add_executable(demo14_06 demo14/06.cpp)
add_executable(demo14_07 demo14/07.cpp)
add_executable(demo15_01 demo15/01.cpp)
add_executable(demo15_02 demo15/02.cpp)
add_executable(demo15_03 demo15/03.cpp)
add_executable(demo15_04 demo15/04.cpp)
add_executable(demo15_05 demo15/05.cpp)
add_executable(demo15_06 demo15/06.cpp)
add_executable(project05_main project05/main.cpp)
add_executable(demo16_01 demo16/01.cpp)
add_executable(demo16_02 demo16/02.cpp)
add_executable(demo16_03 demo16/03.cpp)
add_executable(demo16_04 demo16/04.cpp)
add_executable(demo16_05 demo16/05.cpp)
add_executable(project05_demo_sort project05/demo_sort.cpp)
add_executable(demo16_06 demo16/06.cpp)
add_executable(demo16_07 demo16/07.cpp)
add_executable(demo16_08 demo16/08.cpp)
add_executable(demo17 demo17.cpp)
add_executable(project05_work_map project05/work_map.cpp)
add_executable(demo17_01 demo17/01.cpp)
add_executable(demo17_02 demo17/02.cpp)
add_executable(demo17_03 demo17/03.cpp)
add_executable(demo18_01 demo18/01.cpp)
add_executable(demo18_02 demo18/02.cpp)
add_executable(leetcode_01 leetcode/01.cpp)
add_executable(demo18_03 demo18/03.cpp)
add_executable(demo18_04 demo18/04.cpp)
add_executable(demo18_05 demo18/05.cpp)